# lightcore

./: .gitignore  CONSTITUTION.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  ToDO  index.html  run.sh
.cargo/: config.toml
assets/shaders/: grid_water.wgsl
blackhole-fusion-rescued/: blackhole-deleted-fragments.md  blackhole.rs
lightcore/: CONSTITUTION.md  Cargo.toml  ROADMAP.md  index.html  run.sh
lightcore/assets/: icon_64.rgba
lightcore/assets/shaders/: additive_glow.wgsl  grid_water.wgsl
lightcore/src/: debug.rs  embedded.rs  lib.rs  platform.rs  state.rs
lightcore/src/audio/: mod.rs
lightcore/src/board/: mod.rs
lightcore/src/core/: campaign.rs  components.rs  easing.rs  grid.rs  level.rs  light.rs  locale.rs  matching.rs  mod.rs  run.rs  storage.rs
lightcore/src/gameplay/: chain.rs  falling.rs  input.rs  lifecycle.rs  mod.rs  popping.rs  rewards.rs  shop.rs  spawning.rs  swap.rs  vfx.rs
lightcore/src/input/: mod.rs  pointer.rs
lightcore/src/menu/: level_menu.rs  main_menu.rs  mod.rs  options.rs  pause.rs
lightcore/src/ui/: mod.rs
lightcore/src/visuals/: additive_material.rs  assets.rs  bounce.rs  camera.rs  core_motion.rs  effects.rs  glow.rs  grid_water.rs  light_trail.rs  mod.rs  motion.rs  particles.rs  render_target.rs  score_light.rs  timing.rs
match3/: CONSTITUTION.md  Cargo.toml  index.html  run.sh
match3/assets/shaders/: grid_water.wgsl
match3/src/: debug.rs  lib.rs  main.rs  platform.rs  state.rs
match3/src/audio/: mod.rs
match3/src/board/: mod.rs
match3/src/core/: campaign.rs  components.rs  grid.rs  level.rs  light.rs  locale.rs  matching.rs  mod.rs  run.rs  storage.rs
match3/src/gameplay/: chain.rs  falling.rs  input.rs  lifecycle.rs  mod.rs  popping.rs  shop.rs  spawning.rs  swap.rs
match3/src/input/: pointer.rs
match3/src/menu/: level_menu.rs  main_menu.rs  options.rs  pause.rs
match3/src/ui/: mod.rs
match3/src/visuals/: assets.rs  breathing.rs  camera.rs  core_motion.rs  effects.rs  glow.rs  grid_water.rs  light_trail.rs  mod.rs  motion.rs  particles.rs  render_target.rs  score_light.rs
src/: embedded.rs  lib.rs  main.rs  presentation.rs  settings.rs  state.rs
src/audio/: mod.rs
src/board/: mod.rs
src/core/: campaign.rs  grid.rs  level.rs  light.rs  locale.rs  mod.rs  mode.rs  run.rs  storage.rs
src/gameplay/: chain.rs  falling.rs  input.rs  lifecycle.rs  mod.rs  popping.rs  rewards.rs  shop.rs  spawning.rs  swap.rs  timing.rs  vfx.rs
src/input/: mod.rs  pointer.rs
src/menu/: level_menu.rs  main_menu.rs  mod.rs  options.rs  pause.rs
src/ui/: match_result.rs  mod.rs
src/visuals/: assets.rs  bounce.rs  breathing.rs  camera.rs  core_motion.rs  glow.rs  grid_water.rs  hard_shadow.rs  light_trail.rs  mod.rs  motion.rs  particles.rs  render_target.rs  score_light.rs  space_background.rs
