[workspace]
resolver = "3"
members = ["match3"]

[workspace.dependencies]
bevy = "0.19"

# Bevy is slow to compile unoptimized; these settings keep dev builds fast.
# Our own code compiles with light optimization (fast to build)...
[profile.dev]
opt-level = 3

# ...while dependencies (bevy itself) compile fully optimized, once,
# and then stay cached.
[profile.dev.package."*"]
opt-level = 3
