[package]
name = "lightcore"
version = "0.1.1"
edition = "2024"

[package.metadata.android]
package = "com.uneven3.lightcore"
build_targets = ["aarch64-linux-android"]
apk_name = "lightcore"
strip = "strip"
# `res/mipmap-*/ic_launcher(_round).png` — the app icon shown on the home screen/app drawer.
resources = "res"
# Bundles `assets/` into the APK's `assets/` dir, read at runtime via Android's AssetManager
# (bevy's default AssetPlugin source on this target). Without this key cargo-apk never copies
# the folder in, so every `asset_server.load(...)` (icons, fonts, shaders) silently fails to
# resolve on-device even though the exact same paths work on desktop/web.
assets = "assets"

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 35

# Firmado temporalmente con el debug.keystore de Android para poder probar builds de
# release en dispositivo. NO sirve para publicar en Play Store — antes de un release
# real hay que generar un keystore dedicado (ver `cargo apk --help` / docs de firma).
[package.metadata.android.signing.release]
path = "/home/francisco/.android/debug.keystore"
keystore_password = "android"

[package.metadata.android.application]
label = "Lightcore"
icon = "@mipmap/ic_launcher"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

# cargo-apk2 requires the activity as an array of tables (it supports multiple activities);
# the single-table form worked with the older cargo-apk but errors as "expected a sequence".
[[package.metadata.android.application.activity]]
# bevy's `android-native-activity` feature runs inside Android's NativeActivity; cargo-apk2
# (unlike cargo-apk) does not default this, so it must be named explicitly.
name = "android.app.NativeActivity"
orientation = "portrait"
launch_mode = "singleTask"
config_changes = "orientation|keyboardHidden|screenSize|screenLayout|smallestScreenSize|density|uiMode"
exported = true

# NativeActivity must be told which native library holds `android_main` (from bevy's `#[bevy_main]`);
# it is `liblightcore.so` → lib_name "lightcore". cargo-apk injected this automatically, cargo-apk2
# does not, so without it the app installs but crashes on launch (no library to load).
[[package.metadata.android.application.activity.meta_data]]
name = "android.app.lib_name"
value = "lightcore"

# Make the app launchable from the home screen (MAIN + LAUNCHER). cargo-apk added this implicitly;
# cargo-apk2 does not, so without it the app installs but has no icon to tap.
[[package.metadata.android.application.activity.intent_filter]]
actions = ["android.intent.action.MAIN"]
categories = ["android.intent.category.LAUNCHER"]

[dependencies]
bevy = { workspace = true }
console_error_panic_hook = { workspace = true }
rand = { workspace = true }
web-time = { workspace = true }

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { workspace = true, features = ["wasm_js"] }
web-sys = { workspace = true, features = ["Storage", "Window"] }

# Only for setting the desktop window icon (`platform::set_desktop_window_icon`) — same `winit`
# version bevy_winit already pulls in transitively, just made directly nameable for that one call.
[target.'cfg(not(any(target_os = "android", target_family = "wasm")))'.dependencies]
winit = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lightcore_bin"
path = "src/main.rs"

[features]
# Run with `cargo run --features dev` for much faster incremental builds.
# Links bevy as a shared library instead of statically. Never use in release.
dev = ["bevy/dynamic_linking"]
