[package]
name = "lightcore"
version = "0.1.0"
edition = "2024"

[package.metadata.android]
package = "com.uneven3.lightcore"
build_targets = ["aarch64-linux-android"]
apk_name = "lightcore"
strip = "strip"
# `res/mipmap-*/ic_launcher(_round).png` — the app icon shown on the home screen/app drawer.
resources = "res"

[package.metadata.android.sdk]
min_sdk_version = 28
target_sdk_version = 35

[package.metadata.android.application]
label = "Lightcore"
icon = "@mipmap/ic_launcher"
theme = "@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"

[package.metadata.android.application.activity]
orientation = "portrait"
launch_mode = "singleTask"
config_changes = "orientation|keyboardHidden|screenSize|screenLayout|smallestScreenSize|density|uiMode"
exported = true

[dependencies]
bevy = { workspace = true, features = ["wav", "debug", "android-native-activity"] }
rand = "0.9"
web-time = "1.1"
console_error_panic_hook = "0.1"

[target.'cfg(all(target_family = "wasm", any(target_os = "unknown", target_os = "none")))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
web-sys = { version = "0.3", features = ["Storage", "Window"] }

# Only for setting the desktop window icon (`platform::set_desktop_window_icon`) — same `winit`
# version bevy_winit already pulls in transitively, just made directly nameable for that one call.
[target.'cfg(not(any(target_os = "android", target_family = "wasm")))'.dependencies]
winit = "0.30"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "lightcore_bin"
path = "src/main.rs"

[features]
# Run with `cargo run --features dev` for much faster incremental builds.
# Links bevy as a shared library instead of statically. Never use in release.
dev = ["bevy/dynamic_linking"]
